changed hero styling for mobile, swapped positions of projects and timeline, and reversed timeline so that newest -> first

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <body class="hidden-scrollbar">
         <main>
             <!-- HERO SCREEN -->
-            <a href="#experience" id="name">
+            <a href="#projects" id="name">
                 <h1 class="hero-title">noah</h1>
                 <div style="display:flex;">
                     <h1 class="hero-title" id="ham" style="margin-bottom:4rem;">ham</h1>
@@ -20,48 +20,7 @@
                 <h1 class="hero-title dot">..</h1>
                 <h1 class="hero-title dot">.</h1>
             </a>
-            <!-- TIMELINE SCREEN -->
-            <div class="section" id="experience">
-                <div class="timeline-holder">
-                    <div class="timeline-block">
-                        <div class="timeline-text">
-                            <h2 class="card-title" style="text-align:right;">Feb 2022 - Sep 2024</h2>
-                            <p class="card-description" style="text-align:right;">Worked as a store associate at a Five Below retail store.</p>
-                        </div>
-                        <div class="timeline-space"></div>
-                        <div class="timeline-text">
-                            <h2 class="card-title" style="text-align:right;">Feb 2025 - Sep 2025</h2>
-                            <p class="card-description" style="text-align:right;">Hired as a lead designer for UO's hackathon, QuackHacks.</p>
-                        </div>
-                    </div>
-                    <div style="margin-top: 10px;">
-                        <div class="timeline-dot"></div>
-                        <div class="line"></div>
-                        <div class="timeline-dot"></div>
-                        <div class="line"></div>
-                        <div class="timeline-dot"></div>
-                        <div class="line"></div>
-                        <div class="timeline-dot"></div>
-                        <div class="line"></div>
-                        <div class="timeline-dot"></div>
-                    </div>
-                    <div class="timeline-block">
-                        <div class="timeline-text">
-                            <h2 class="card-title">May 2024</h2>
-                            <p class="card-description">Graduated from Vista Del Lago High School with a 4.1 GPA.</p>
-                        </div>
-                        <div class="timeline-text">
-                            <h2 class="card-title">Sep 2024</h2>
-                            <p class="card-description">Enrolled in the University of Oregon as a Computer Science major.</p>
-                        </div>
-                        <div class="timeline-space"></div>
-                        <div class="timeline-text">
-                            <h2 class="card-title">Sep 2025</h2>
-                            <p class="card-description">Transferred to the University of Wisconsin-Madison as a Computer Science major.</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
+
             <!-- PROJECTS SCREEN -->
             <div class="section" id="projects">
                 <div class="card-holder">
@@ -97,6 +56,53 @@
                     </div>
                 </div>
             </div>
+
+            <!-- TIMELINE SCREEN -->
+            <div class="section" id="experience">
+                <div class="timeline-holder">
+                    <div class="timeline-block">
+                        <div class="timeline-space"></div>
+                        <div class="timeline-text">
+                            <h2 class="card-title" style="text-align:right;">Feb 2025 - Sep 2025</h2>
+                            <p class="card-description" style="text-align:right;">Hired as a graphic designer for UO's hackathon, QuackHacks.</p>
+                        </div>
+                        <div class="timeline-space"></div>
+                        <div class="timeline-text">
+                            <h2 class="card-title" style="text-align:right;">Feb 2022 - Sep 2024</h2>
+                            <p class="card-description" style="text-align:right;">Worked as a store associate at a Five Below retail store.</p>
+                        </div>
+                    </div>
+                    <div style="margin-top: 10px;">
+                        <div class="timeline-dot"></div>
+                        <div class="line"></div>
+                        <div class="timeline-dot"></div>
+                        <div class="line"></div>
+                        <div class="timeline-dot"></div>
+                        <div class="line"></div>
+                        <div class="timeline-dot"></div>
+                        <div class="line"></div>
+                        <div class="timeline-dot"></div>
+                    </div>
+                    <div class="timeline-block">
+                        <div class="timeline-text">
+                            <h2 class="card-title">Sep 2025</h2>
+                            <p class="card-description">Transferred to the University of Wisconsin-Madison as a Computer Science major.</p>
+                        </div>
+                        <div class="timeline-space"></div>
+                        <div class="timeline-text">
+                            <h2 class="card-title">Sep 2024</h2>
+                            <p class="card-description">Enrolled in the University of Oregon as a Computer Science major.</p>
+                        </div>
+                        <div class="timeline-text">
+                            <h2 class="card-title">May 2024</h2>
+                            <p class="card-description">Graduated from Vista Del Lago High School with a 4.1 GPA.</p>
+                        </div>
+
+
+                    </div>
+                </div>
+            </div>
+
             <!-- ABOUT SCREEN -->
             <div class="section" id="about">
                 <p>I'm Noah, currently studying computer science as a first-year student at the University of Wisconsin-Madison.</p>
