--- a/projects/byte-n-bite.html
+++ b/projects/byte-n-bite.html
@@ -20,7 +20,7 @@
                 <p>The search algorithm can filter pretty much anything. Whether you know the recipe you want to make or you just have a list of ingredients, you can just type in the search box.</p>
                 <p>If you're in the mood for something new, you can also use the integrated OpenAI API to generate a new recipe given any (and I really mean ANY) ingredients that you have on hand.</p>
                 <div class="link-holder">
-                    <a href="https://github.com/noahham/wordle-solver/" target="_blank" class="social-link"><p>github</p></a>
+                    <a href="https://github.com/sbergcoding/quack_hacks_2025_2.0" target="_blank" class="social-link"><p>github</p></a>
                 </div>
             </div>
         </main>
