--- a/projects/trebbbble.html
+++ b/projects/trebbbble.html
@@ -93,7 +93,16 @@
     </head>
     <body>
         <main>
-            <a href="https://noahham.com/projects" class="back-link"><p>&larr; back to projects</p></a>
+            <div class="back-link-holder">
+                <a href="https://noahham.com/projects/" class="back-link">
+                    <img src="../media/arrow-left.svg" alt="Left Arrow" class="back-icon">
+                    <p>projects</p>
+                </a>
+                <a href="https://noahham.com" class="back-link">
+                    <img src="../media/corner-left-up.svg" alt="Up Arrow" class="back-icon">
+                    <p>home</p>
+                </a>
+            </div>
             <div class="text-holder">
                 <h2>Trebbbble</h2>
                 <p class="stack"><i>HTML, CSS, JavaScript, Python, Flask, ACRCloud</i></p>
