added new styled back links for 404 and project pages

--- a/404.html
+++ b/404.html
@@ -30,7 +30,12 @@
     </head>
     <body>
         <main>
-            <a href="https://noahham.com/#projects" class="back-link"><p>&larr;&ensp;back to home</p></a>
+            <div class="back-link-holder">
+                <a href="https://noahham.com/" class="back-link">
+                    <img src="media/arrow-left.svg" alt="Left Arrow" class="back-icon">
+                    <p>home</p>
+                </a>
+            </div>
             <h1 class="error">404</h1>
             <p class="error-message">Sorry, but the page you're looking for doesn't exist.</p>
         </main>
