this will either break everything or fix the url links

--- a/index.html
+++ b/index.html
@@ -25,31 +25,31 @@
             <div class="section" id="projects">
                 <div class="card-holder">
                     <div class="row">
-                        <a href="projects/portfolio.html" class="card">
+                        <a href="projects/portfolio/" class="card">
                             <h2 class="card-title">My Portfolio</h2>
                             <p class="card-description">Hey look, it's this website.</p>
                         </a>
-                        <a href="projects/byte-n-bite.html" class="card">
+                        <a href="projects/byte-n-bite" class="card">
                             <h2 class="card-title">Byte 'n Bite</h2>
                             <p class="card-description">An AI-powered recipe generator.</p>
                         </a>
                     </div>
                     <div class="row">
-                        <a href="projects/trebbbble.html" class="card">
+                        <a href="projects/trebbbble/" class="card">
                             <h2 class="card-title">Trebbbble</h2>
                             <p class="card-description">A handy website to recognize music from media.</p>
                         </a>
-                        <a href="projects/wellness-journal.html" class="card">
+                        <a href="projects/wellness-journal/" class="card">
                             <h2 class="card-title">Wellness Journal</h2>
                             <p class="card-description">A comprehensive app<br>to keep up mental health.</p>
                         </a>
                     </div>
                     <div class="row">
-                        <a href="projects/duckweb-autofill.html" class="card">
+                        <a href="projects/duckweb-autofill/" class="card">
                             <h2 class="card-title">DuckWeb Autofill</h2>
                             <p class="card-description">A simple extension to autofill your login for UO's DuckWeb.</p>
                         </a>
-                        <a href="projects/type-lat.html" class="card">
+                        <a href="projects/type-lat/" class="card">
                             <h2 class="card-title">TUI Typing Test</h2>
                             <p class="card-description">A terminal-based typing test accessible through SSH.</p>
                         </a>
@@ -111,7 +111,7 @@
                 <div class="link-holder">
                     <a href="mailto:noahham25@gmail.com" target="_blank" class="social-link"><p>email</p></a>
                     <a href="https://www.linkedin.com/in/noah-ham/" target="_blank" class="social-link"><p>linkedin</p></a>
-                    <a href="projects.html" class="social-link"><p>projects</p></a>
+                    <a href="projects/" class="social-link"><p>projects</p></a>
                     <a href="https://www.github.com/noahham/" target="_blank" class="social-link"><p>github</p></a>
                     <a href="resume.pdf" target="_blank" class="social-link"><p>resume</p></a>
                 </div>
