--- a/projects/index.html
+++ b/projects/index.html
@@ -6,8 +6,8 @@
         <title>Projects</title>
         <link rel="icon" href="https://noahham.com/media/favicon-dark.png" type="image/png" media="(prefers-color-scheme: dark)">
         <link rel="icon" href="https://noahham.com/media/favicon-light.png" type="image/png" media="(prefers-color-scheme: light)">
-        <link rel="stylesheet" href="styles/main.css">
-        <link rel="stylesheet" href="styles/breakout.css">
+        <link rel="stylesheet" href="../styles/main.css">
+        <link rel="stylesheet" href="../styles/breakout.css">
         <style>
             main .project-holder {
                 gap: 6px;
@@ -56,61 +56,61 @@
         <main>
             <div class="back-link-holder">
                 <a href="https://noahham.com/" class="back-link">
-                    <img src="media/arrow-left.svg" alt="Left Arrow" class="back-icon">
+                    <img src="../media/arrow-left.svg" alt="Left Arrow" class="back-icon">
                     <p>home</p>
                 </a>
             </div>
             <div class="project-holder">
-                <a href="projects/byte-n-bite.html" class="project">
+                <a href="byte-n-bite/index.html" class="project">
                     <div class="header-holder">
                         <h2>Byte 'n Bite</h2>
                         <p class="position"><i>Python, Tkinter</i></p>
                     </div>
                     <p>An offline, AI powered recipe generating and lookup app.</p>
                 </a>
-                <a href="projects/duckweb-autofill" class="project">
+                <a href="duckweb-autofill/index.html" class="project">
                     <div class="header-holder">
                         <h2>DuckWeb Autofill</h2>
                         <p class="position"><i>HTML, CSS, JavaScript</i></p>
                     </div>
                     <p>A basic Chrome extension that autofills your University of Oregon DuckWeb login info.</p>
                 </a>
-                <a href="projects/photography.html" class="project">
+                <a href="photography/index.html" class="project">
                     <div class="header-holder">
                         <h2>Photography Portfolio</h2>
                         <p class="position"><i>HTML, CSS, JavaScript</i></p>
                     </div>
                     <p>A styled portfolio site that looks like it sells something but really does nothing.</p>
                 </a>
-                <a href="projects/portfolio.html" class="project">
+                <a href="portfolio/" class="project">
                     <div class="header-holder">
                         <h2>My Portfolio</h2>
                         <p class="position"><i>HTML, CSS, JavaScript</i></p>
                     </div>
                     <p>This is the website you're on right now. I hope you like it :).</p>
                 </a>
-                <a href="projects/trebbbble.html" class="project">
+                <a href="trebbbble/" class="project">
                     <div class="header-holder">
                         <h2>Trebbbble</h2>
                         <p class="position"><i>HTML, CSS, JavaScript, Python, Flask</i></p>
                     </div>
                     <p>A website that can recognize music from short-form videos.</p>
                 </a>
-                <a href="projects/type-lat.html" class="project">
+                <a href="type-lat/" class="project">
                     <div class="header-holder">
                         <h2>TUI Typing Test</h2>
                         <p class="position"><i>Golang, Bubbletea, SSH</i></p>
                     </div>
                     <p>A website that can recognize music from short-form videos.</p>
                 </a>
-                <a href="projects/wellness-journal.html" class="project">
+                <a href="wellness-journal/" class="project">
                     <div class="header-holder">
                         <h2>Wellness Journal</h2>
                         <p class="position"><i>Python, Tkinter</i></p>
                     </div>
                     <p>A survey-based mental journaling app.</p>
                 </a>
-                <a href="projects/wordle-solver.html" class="project">
+                <a href="wordle-solver/" class="project">
                     <div class="header-holder">
                         <h2>Wordle Solver</h2>
                         <p class="position"><i>Python, Tkinter</i></p>
@@ -119,6 +119,6 @@
                 </a>
             </div>
         </main>
-        <script src="scripts/onLoad.js"></script>
+        <script src="../scripts/onLoad.js"></script>
     </body>
 </html>
