--- a/projects/portfolio/index.html
+++ b/projects/portfolio/index.html
@@ -6,8 +6,8 @@
         <title>Portfolio</title>
         <link rel="icon" href="https://noahham.com/media/favicon-dark.png" type="image/png" media="(prefers-color-scheme: dark)">
         <link rel="icon" href="https://noahham.com/media/favicon-light.png" type="image/png" media="(prefers-color-scheme: light)">
-        <link rel="stylesheet" href="../styles/main.css">
-        <link rel="stylesheet" href="../styles/breakout.css">
+        <link rel="stylesheet" href="../../styles/main.css">
+        <link rel="stylesheet" href="../../styles/breakout.css">
         <style>
             .demo-holder {
                 display: flex;
@@ -41,11 +41,11 @@
         <main>
             <div class="back-link-holder">
                 <a href="https://noahham.com/projects/" class="back-link">
-                    <img src="../media/arrow-left.svg" alt="Left Arrow" class="back-icon">
+                    <img src="../../media/arrow-left.svg" alt="Left Arrow" class="back-icon">
                     <p>projects</p>
                 </a>
                 <a href="https://noahham.com" class="back-link">
-                    <img src="../media/corner-left-up.svg" alt="Up Arrow" class="back-icon">
+                    <img src="../../media/corner-left-up.svg" alt="Up Arrow" class="back-icon">
                     <p>home</p>
                 </a>
             </div>
@@ -66,6 +66,6 @@
                 </div>
             </div>
         </main>
-        <script src="../scripts/onLoad.js"></script>
+        <script src="../../scripts/onLoad.js"></script>
     </body>
 </html>
