--- a/projects/duckweb-autofill/privacy-policy/index.html
+++ b/projects/duckweb-autofill/privacy-policy/index.html
@@ -6,8 +6,8 @@
         <title>Privacy Policy</title>
         <link rel="icon" href="https://noahham.com/media/favicon-dark.png" type="image/png" media="(prefers-color-scheme: dark)">
         <link rel="icon" href="https://noahham.com/media/favicon-light.png" type="image/png" media="(prefers-color-scheme: light)">
-        <link rel="stylesheet" href="../../styles/main.css">
-        <link rel="stylesheet" href="../../styles/breakout.css">
+        <link rel="stylesheet" href="../../../styles/main.css">
+        <link rel="stylesheet" href="../../../styles/breakout.css">
         <style>
             main {margin-top: 10rem;}
             .dramatic {margin-top: 3rem;}
@@ -38,6 +38,6 @@
                 <p>You can remove your credentials at any time by simply uninstalling the extension. Your data will be deleted automatically.</p>
             </div>
         </main>
-        <script src="../../scripts/onLoad.js"></script>
+        <script src="../../../scripts/onLoad.js"></script>
     </body>
 </html>
