--- a/projects/trebbbble/index.html
+++ b/projects/trebbbble/index.html
@@ -6,8 +6,8 @@
         <title>Trebbbble</title>
         <link rel="icon" href="https://noahham.com/media/favicon-dark.png" type="image/png" media="(prefers-color-scheme: dark)">
         <link rel="icon" href="https://noahham.com/media/favicon-light.png" type="image/png" media="(prefers-color-scheme: light)">
-        <link rel="stylesheet" href="../styles/main.css">
-        <link rel="stylesheet" href="../styles/breakout.css">
+        <link rel="stylesheet" href="../../styles/main.css">
+        <link rel="stylesheet" href="../../styles/breakout.css">
         <style>
             /* In-Document styling for song card */
             @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100..700;1,100..700&display=swap');
@@ -95,11 +95,11 @@
         <main>
             <div class="back-link-holder">
                 <a href="https://noahham.com/projects/" class="back-link">
-                    <img src="../media/arrow-left.svg" alt="Left Arrow" class="back-icon">
+                    <img src="../../media/arrow-left.svg" alt="Left Arrow" class="back-icon">
                     <p>projects</p>
                 </a>
                 <a href="https://noahham.com" class="back-link">
-                    <img src="../media/corner-left-up.svg" alt="Up Arrow" class="back-icon">
+                    <img src="../../media/corner-left-up.svg" alt="Up Arrow" class="back-icon">
                     <p>home</p>
                 </a>
             </div>
@@ -112,11 +112,11 @@
                 <p class="dramatic"><i>This is exactly what Trebbbble was created for.</i></p>
                 <div id="song-card">
                     <div class="cover-and-links">
-                        <img src="../media/cover.jpg" alt="Album Cover" id="cover">
+                        <img src="../../media/cover.jpg" alt="Album Cover" id="cover">
                         <div class="music-link-holder">
-                            <a href="https://open.spotify.com/search/Complexion%20%28A%20Zulu%20Love%29%20Kendrick%20Lamar" target="_blank" class="icon-link"><img src="../media/spotify.svg" alt="Spotify" class="icon"></a>
-                            <a href="https://music.youtube.com/search?q=Complexion%20%28A%20Zulu%20Love%29%20Kendrick%20Lamar" target="_blank" class="icon-link"><img src="../media/yt_music.svg" alt="YouTube Music" class="icon"></a>
-                            <a href="https://music.apple.com/us/search?term=Complexion%20%28A%20Zulu%20Love%29%20Kendrick%20Lamar" target="_blank" class="icon-link"><img src="../media/apple_music.svg" alt="Apple Music" class="icon"></a>
+                            <a href="https://open.spotify.com/search/Complexion%20%28A%20Zulu%20Love%29%20Kendrick%20Lamar" target="_blank" class="icon-link"><img src="../../media/spotify.svg" alt="Spotify" class="icon"></a>
+                            <a href="https://music.youtube.com/search?q=Complexion%20%28A%20Zulu%20Love%29%20Kendrick%20Lamar" target="_blank" class="icon-link"><img src="../../media/yt_music.svg" alt="YouTube Music" class="icon"></a>
+                            <a href="https://music.apple.com/us/search?term=Complexion%20%28A%20Zulu%20Love%29%20Kendrick%20Lamar" target="_blank" class="icon-link"><img src="../../media/apple_music.svg" alt="Apple Music" class="icon"></a>
                         </div>
                     </div>
                     <div>
@@ -131,6 +131,6 @@
                 </div>
             </div>
         </main>
-        <script src="../scripts/onLoad.js"></script>
+        <script src="../../scripts/onLoad.js"></script>
     </body>
 </html>
