fixed 404 styling but like fr this time

--- a/404.html
+++ b/404.html
@@ -7,7 +7,7 @@
         <link rel="icon" href="https://noahham.com/media/favicon-dark.png" type="image/png" media="(prefers-color-scheme: dark)">
         <link rel="icon" href="https://noahham.com/media/favicon-light.png" type="image/png" media="(prefers-color-scheme: light)">
         <link rel="stylesheet" href="https://noahham.com/styles/main.css">
-        <link rel="stylesheet" href="styles/breakout.css">
+        <link rel="stylesheet" href="https://noahham.com/styles/breakout.css">
         <style>
             main {opacity: 1;}
 
