--- a/projects/tui-typing-test/index.html
+++ b/projects/tui-typing-test/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>DuckWeb Autofill</title>
+        <title>TUI Typing Test</title>
         <link rel="icon" href="https://noahham.com/media/favicon-dark.png" type="image/png" media="(prefers-color-scheme: dark)">
         <link rel="icon" href="https://noahham.com/media/favicon-light.png" type="image/png" media="(prefers-color-scheme: light)">
         <link rel="stylesheet" href="../../styles/main.css">
@@ -20,18 +20,16 @@
             <div class="empty-div"></div>
             <div class="text-holder">
                 <div class="header-holder">
-                    <h2>DuckWeb Autofill</h2>
-                    <p>April 2025</p>
+                    <h2>TUI Typing Test</h2>
+                    <p>June 2025</p>
                 </div>
 
-                <p>A basic Chrome extension that autofills your University of Oregon DuckWeb login info.</p>
-                <p>The DuckWeb login screen (and honestly the entirety of DuckWeb as a whole) is widely known for both looking and functioning like complete garbage. One particular problem with logging in is that normal password apps can't autofill the ID and PAC because both input boxes are marked as password inputs.</p>
-                <p>This extension is specialized to fix this issue by hard-coding the HTML ID's of each input, and each time a DuckWeb page is loaded, it looks for those ID's and fills in the given info.</p>
+                <p>A terminal-based typing test available to everyone through SSH.</p>
+                <p>Inspired by TUI interfaces like ssh terminal.shop, I wanted to create something similar. Terminal-based interfaces are especially interesting because they rework the entire idea of space compared to a typical HTML interface. As it turns out, UI/UX changes entirely when the interface must be text-only and navigated by keyboard. A TUI strips away automated layout tools and forces you to actually think about spacing, flow, and hierarchy in a different way.</p>
+                <p>Before this project, most of my programming has been with HTML, CSS, and Python. I was pretty hesitant to approach Golang and Bubbletea but it turned out a lot less complicated than I initially thought it would be. After a ton of trial and error, I even got the interface running on an Oracle server.</p>
 
                 <div class="link-holder">
-                    <a href="https://chromewebstore.google.com/detail/duckweb-autofill/djckadmafmbbbfgpjdchhaaigemgaige" target="_blank" class="social-link"><p>webstore</p></a>
-                    <a href="privacy-policy/index.html" target="_blank" class="social-link"><p>policy</p></a>
-                    <a href="https://github.com/noahham/duckweb-autofill" target="_blank" class="social-link"><p>github</p></a>
+                    <a href="https://github.com/noahham/ssh-type" target="_blank" class="social-link"><p>github</p></a>
                 </div>
             </div>
             <div class="empty-div"></div>
