fixing weird links

--- a/index.html
+++ b/index.html
@@ -25,31 +25,31 @@
             <div class="section" id="projects">
                 <div class="card-holder">
                     <div class="row">
-                        <a href="projects/design-interactive-merch/index.html" class="card">
+                        <a href="https://noahham.com/projects/design-interactive-merch/" class="card">
                             <h2 class="card-title">DI Merch</h2>
                             <p class="card-description">A clothing design for designers.</p>
                         </a>
-                        <a href="projects/duckweb-autofill/index.html" class="card">
+                        <a href="https://noahham.com/projects/duckweb-autofill/" class="card">
                             <h2 class="card-title">DuckWeb Autofill</h2>
                             <p class="card-description">An autofill extension for UO's DuckWeb.</p>
                         </a>
                     </div>
                     <div class="row">
-                        <a href="projects/swishscan/index.html" class="card">
+                        <a href="https://noahham.com/projects/swishscan/" class="card">
                             <h2 class="card-title">SwishScan</h2>
                             <p class="card-description">A basketball form improvement app.</p>
                         </a>
-                        <a href="projects/trebbbble/index.html" class="card">
+                        <a href="https://noahham.com/projects/trebbbble/" class="card">
                             <h2 class="card-title">Trebbbble</h2>
                             <p class="card-description">A website for music recognition from video.</p>
                         </a>
                     </div>
                     <div class="row">
-                        <a href="projects/quackhacks-rebrand/index.html" class="card">
+                        <a href="https://noahham.com/projects/quackhacks-rebrand/" class="card">
                             <h2 class="card-title">QH Rebrand</h2>
                             <p class="card-description">A new identity for a premier hackathon.</p>
                         </a>
-                        <a href="projects/tui-typing-test/index.html" class="card">
+                        <a href="https://noahham.com/projects/tui-typing-test/" class="card">
                             <h2 class="card-title">TUI Typing Test</h2>
                             <p class="card-description">An SSH-accessible typing speed test.</p>
                         </a>
