--- a/projects/tui-typing-test/index.html
+++ b/projects/tui-typing-test/index.html
@@ -11,7 +11,7 @@
     </head>
     <body>
         <div class="back-link-holder">
-            <a class="back-link" href="../../index.html" onclick="sessionStorage.setItem('scrollToProjects', '1')">
+            <a class="back-link" href="https://noahham.com/" onclick="sessionStorage.setItem('scrollToProjects', '1')">
                 <img src="../../media/back-link.svg" alt="Back Arrow" class="back-icon">
                 <p>home</p>
             </a>
