--- a/404.html
+++ b/404.html
@@ -9,7 +9,18 @@
         <link rel="stylesheet" href="https://noahham.com/styles/main.css">
         <link rel="stylesheet" href="https://noahham.com/styles/breakout.css">
         <style>
-            main {opacity: 1;}
+            main {
+                opacity: 1;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                margin-top: 4rem;
+            }
+
+            .back-link-holder {
+                position: static;
+                margin-bottom: 2rem;
+            }
 
             .error {
                 font-size: 3rem;
@@ -21,23 +32,27 @@
 
                 transition: all 0.3s;
             }
+
             .error:hover {
                 color: white;
             }
 
-            .error-message {color: #999999;}
+            .error-message {
+                color: #999999;
+                text-align: center;
+            }
         </style>
     </head>
     <body>
         <main>
             <div class="back-link-holder">
-                <a href="https://noahham.com/" class="back-link">
-                    <img src="media/arrow-left.svg" alt="Left Arrow" class="back-icon">
+                <a class="back-link" href="https://noahham.com/">
+                    <img src="media/back-link.svg" alt="Back Arrow" class="back-icon">
                     <p>home</p>
                 </a>
             </div>
             <h1 class="error">404</h1>
-            <p class="error-message">Sorry, but the page you're looking for doesn't exist.</p>
+            <p class="error-message">Sorry, but the page you're looking for<br>doesn't exist.</p>
         </main>
     </body>
 </html>
